# ontology_atlas

./: .gitignore  .pre-commit-config.yaml  ARTIFACTS.md  Makefile  README.md  STEPS.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
docs/architecture/: data-model.md  graph-intelligence.md  graph-rag.md  overview.md  pipeline.md  portal.md
docs/development/: quality-gates.md  roadmap.md  scheduled-releases.md
docs/getting-started/: current-status.md  environment.md  graphify.md  install.md  neo4j-desktop.md  openai.md  portal-and-wiki.md  progressive-updates.md  quickstart.md  slidesmith-poc.md
docs/operations/: ci-cd.md  runbooks.md  troubleshooting.md
docs/reference/: caveats.md  cli.md  configuration.md  generated-project.md  structured-data.md
src/company_ontology_agent/: __init__.py
src/company_ontology_agent/api/: app.py
src/company_ontology_agent/cli/: commands_data.py  commands_graph.py  commands_ingest.py  commands_init.py  commands_portal.py  commands_rag.py  commands_wiki.py  main.py
src/company_ontology_agent/config/: project_config.py  settings.py  templates.py
src/company_ontology_agent/extraction/: base.py  code_map.py  graphify_adapter.py  graphify_artifacts.py  graphify_report.py  llm_structured_extractor.py  openai_provider.py  prompts.py  provider.py  schemas.py
src/company_ontology_agent/graph/: baseline.py  bootstrap.py  cypher.py  diffing.py  models.py  neo4j_client.py  repository.py  visuals.py
src/company_ontology_agent/ingestion/: base.py  documents.py  folder.py  normalizer.py  pdf.py  raw_import.py  transcript.py
src/company_ontology_agent/ontology/: mappings.py  shacl.py  validator.py
src/company_ontology_agent/portal/: __init__.py  builder.py  changes.py  intelligence.py  ranking.py
src/company_ontology_agent/resolution/: canonicalization.py  (+1 more)
tests/: test_core.py  test_demo_outputs.py  test_diffing.py  test_graphify_openai_validation.py  test_neo4j_roundtrip.py  test_portal.py  test_rag.py  test_semantic_enrichment.py  test_structured_data.py
(+38 files in other folders)
